# B22CS033_NLU_Assignment-2

./: .gitignore  README.md  main.py  pyproject.toml
problem_1/: about_dataset.txt  cleaned_tokens.json  corpus.txt  generate_corpus.py  prepare_dataset.py  requirements.txt  word2vec_scratch.py
problem_1/results/: output.txt
problem_2/: evaluate.py  generated_attn.txt  generated_blstm.txt  generated_rnn.txt  names.txt  train_attention.py  train_blstm.py  train_rnn.py
