[project]
name = "b22cs033-nlu-assignment-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pymupdf>=1.27.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "wordcloud>=1.9.6",
]
